feat(src/components/containers/Auth/) vista auth

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -3,4 +3,7 @@
 	--black: hsl(0, 0%, 13%);
 	--fullBlack: hsl(0, 0%, 0%);
 	--blue: royalblue;
+	--purple: purple;
+	--softBlack: hsl(0, 0%, 18%);
+	--pink: hsl(299, 45%, 70%);
 }
