--- a/src/styles/scroll.css
+++ b/src/styles/scroll.css
@@ -8,7 +8,7 @@ body::-webkit-scrollbar:vertical {
 }
 
 body::-webkit-scrollbar-thumb {
-	background-color: var(--blue);
+	background-color: var(--purple);
 	width: 100%;
 	border-radius: 25px;
 }
