feat(src/components/containers/Films/)

--- a/src/components/containers/Header/style.module.css
+++ b/src/components/containers/Header/style.module.css
@@ -1,6 +1,6 @@
 .header {
 	padding: 15px;
-	background-color: var(--purple);
+	background-color: var(--violet);
 }
 .header__nav {
 	display: flex;
